tests/errors/semantic/blocking/IMPORTING_EXISTING_IDENTIFIED.py
# Object has already been defined with type '<class 'pyccel.ast.core.Module'>'. Type 'int' in assignment is incompatible
# pylint: disable=missing-function-docstring, missing-module-docstring
numpy = 3

import numpy

x = numpy.ones(3)
